# hw

BDF/: CMakeLists.txt
BDF/examples/system1/: CMakeLists.txt  a.out  adaptive_bdf2.cpp  adbdf2.txt  bdf2.cpp  bdf2.txt  imp_euler.cpp  rosen.cpp
BDF/examples/system1/new_with_adaptive/: analytical.cpp  plot.plt
BDF/examples/system1/new_with_adaptive/plots/: adbdf2.txt  bdf2.txt
BDF/examples/system1/output/: bdf  imp  plot_bdf.txt  plot_imp.txt  plot_rosen.txt  rosen
BDF/examples/system1/with_adaptive/: CMakeLists.txt  adaptive_bdf2.cpp  adbdf2.txt  analytical.cpp  analytical.txt  bdf2.cpp  plot.plt
BDF/examples/system2/: CMakeLists.txt  a.out  bdf2.cpp  imp_euler.cpp  rosen.cpp
BDF/examples/system2/output/: plotx.txt  ploty.txt  plotz.txt
BDF/examples/system3/: CMakeLists.txt  a.out  bdf2.cpp
BDF/examples/system3/new_with_adaptive/: adaptive_bdf2.cpp  bdf2.cpp  plot.plt
BDF/examples/system3/new_with_adaptive/plots/: adbdf2.txt  analytical.txt  bdf2.txt
BDF/examples/system3/new_with_adaptive_2.0/large_time/: adaptive_bdf2.cpp
BDF/examples/system3/new_with_adaptive_2.0/large_time_2/: a.out  adaptive_bdf2.cpp  adaptive_bdf2.hpp  adbdf2.txt  analytical.cpp  (+1 more)
BDF/examples/system3/with_adaptive/: a.out  adaptive_bdf2.cpp  analytical.cpp  analytical.cpp~  analytical.txt  bdf2.cpp  plot.plt
BDF/include/: adaptive_bdf2.hpp~
BDF/performance/: CMakeLists.txt  performance_bdf2.cpp  performance_imp_euler.cpp  performance_rosenbrock.cpp
BDF/performance/plots/: plot.plt  time_bdf.txt  time_imp.txt  time_rosen.txt
BDF/test/: CMakeLists.txt  test_bdf2.cpp
(+12 files in other folders)
